Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1117,7 +1117,7 @@
  emp_ita_prosperity_for_all_tt:0 "少なくとも8の州が§Y繁栄§!している必要があります。"
  emp_ita_develop_the_south_tt:0 "§Y南イタリア§!に領有する5以上の州が§Y25§!以上の開発度を持っている必要があります"
  emp_ita_the_gallic_wars_tt:1 "§Yフランス§!地方において§Y50§!以上の州を自身、または非朝貢国である従属国が領有している"
- emp_ita_redeem_tirolo_tt:1 "Own 4 provinces in the §YTirol§! area"
+ emp_ita_redeem_tirolo_tt:1 "§Yチロル§!地域の4州を領有する"
  emp_ven_aldine_monopoly_title:0 "アルドの独占"
  emp_ven_aldine_monopoly_desc:0 "印刷機はヴェネツィアに多くの新しい革新をもたらしており、それには、それが由来する地域にちなんで名付けられた傾斜した筆記体フォントである「イタリック体」、及びギリシャ語で書かれた作品の制作に独占権を与える初期の著作権保護が含まれている。これらの印刷の革新は、高貴なる共和国全体で新しいアイデアを生み出すのに役立つだろう。"
  emp_ven_plague_doctor_training_title:0 "ペスト医の訓練"
@@ -2423,7 +2423,7 @@
  IS_NOT_IN_WAR_TRIGGER_STARTS:0 "戦争中ではない"
  dof_refused_join_war:0 "不名誉な信仰の擁護者"
  defender_of_faith_refused_cta:0 "不名誉な信仰の擁護者"
- COUNTRY_NAME_WILL_CHANGE_IN:0 "国名が$NAME|Y$に変更されます"
+ COUNTRY_NAME_WILL_CHANGE_IN:0 "Country name will change to $NAME|Y$."
  COUNTRY_NAME_WILL_BE_RESTORED:0 "国名は元の内容に復元されます"
  KINGDOM_OF_GOD:0 "神の王国"
  KINGDOM_OF_GOD_ADJ:0 "教皇領"
