--- a/source/localisation/north_america_redone_l_english.yml
+++ b/source/localisation/north_america_redone_l_english.yml
@@ -41,8 +41,8 @@
  ONE_ADJ:0 "オナイダ"
  ONO:0 "オノンダガ"
  ONO_ADJ:0 "オノンダガ"
- CAY:0 "Cayuga"
- CAY_ADJ:0 "Cayuga"
+ CAY:0 "カユガ"
+ CAY_ADJ:0 "カユガ"
  SEN:0 "Seneca"
  SEN_ADJ:0 "Seneca"
  TAH:0 "Tahontaenrat"
@@ -55,34 +55,34 @@
  ATW_ADJ:0 "Attiwandaron"
  ARN:0 "Arendaronon"
  ARN_ADJ:0 "Arendaronon"
- TIO:0 "Tionontate"
- TIO_ADJ:0 "Tionontate"
+ TIO:0 "タイオノンタッティ"
+ TIO_ADJ:0 "タイオノンタッティ"
  OSH:0 "Osheaga"
  OSH_ADJ:0 "Osheaga"
- STA:0 "Stadacona"
- STA_ADJ:0 "Stadacona"
- ERI:0 "Erie"
- ERI_ADJ:0 "Erie"
- WEN:0 "Wenro"
- WEN_ADJ:0 "Wenro"
- TSC:0 "Tuscarora"
- TSC_ADJ:0 "Tuscarora"
+ STA:0 "スタダコナ"
+ STA_ADJ:0 "スタダコナ"
+ ERI:0 "エリー"
+ ERI_ADJ:0 "エリー"
+ WEN:0 "ウェンロー"
+ WEN_ADJ:0 "ウェンロー"
+ TSC:0 "タスカローラ"
+ TSC_ADJ:0 "タスカローラ"
  OHK:0 "Ohkay Owingeh"
  OHK_ADJ:0 "Ohkay Owingeh"
- ISL:0 "Isleta"
- ISL_ADJ:0 "Isleta"
- ACO:0 "Acoma"
- ACO_ADJ:0 "Acoma"
- CAO:0 "Cahokia"
- CAO_ADJ:0 "Cahokia"
- PEO:0 "Peoria"
- PEO_ADJ:0 "Peoria"
- KSK:0 "Kaskaskia"
- KSK_ADJ:0 "Kaskaskia"
- PEN:0 "Penobscot"
- PEN_ADJ:0 "Penobscot"
- MLS:0 "Maliseet"
- MLS_ADJ:0 "Maliseet"
+ ISL:0 "イスレタ"
+ ISL_ADJ:0 "イスレタ"
+ ACO:0 "アコマ"
+ ACO_ADJ:0 "アコマ"
+ CAO:0 "カホキア"
+ CAO_ADJ:0 "カホキア"
+ PEO:0 "ピオリア"
+ PEO_ADJ:0 "ピオリア"
+ KSK:0 "カスカスキア"
+ KSK_ADJ:0 "カスカスキア"
+ PEN:0 "ペノブスコット"
+ PEN_ADJ:0 "ペノブスコット"
+ MLS:0 "マリシート"
+ MLS_ADJ:0 "マリシート"
  NEH:0 "Nehiyaw"
  NEH_ADJ:0 "Nehiyaw"
  NAK:0 "Nakawe"
@@ -91,28 +91,28 @@
  HWK_ADJ:0 "Hathawekela"
  CLG:0 "Chalaghawtha"
  CLG_ADJ:0 "Chalaghawtha"
- INN:0 "Innu"
- INN_ADJ:0 "Innu"
+ INN:0 "インヌ"
+ INN_ADJ:0 "インヌ"
  KSP:0 "Kispoko"
  KSP_ADJ:0 "Kispoko"
- WAM:0 "Wampanoag"
- WAM_ADJ:0 "Wampanoag"
- AGQ:0 "Algonquin"
- AGQ_ADJ:0 "Algonquin"
- LAK:0 "Lakota"
- LAK_ADJ:0 "Lakota"
- WCY:0 "Wichiyena"
- WCY_ADJ:0 "Wichiyena"
+ WAM:0 "ワンパノアグ"
+ WAM_ADJ:0 "ワンパノアグ"
+ AGQ:0 "アルゴンキン"
+ AGQ_ADJ:0 "アルゴンキン"
+ LAK:0 "ラコタ"
+ LAK_ADJ:0 "ラコタ"
+ WCY:0 "ウィチェナ"
+ WCY_ADJ:0 "ウィチェナ"
  MSG:0 "Mississage"
  MSG_ADJ:0 "Mississage"
- CCA:0 "Chisca"
- CCA_ADJ:0 "Chisca"
+ CCA:0 "チスカ"
+ CCA_ADJ:0 "チスカ"
  QUI:0 "Quizquiz"
  QUI_ADJ:0 "Quizquiz"
- PCH:0 "Pacaha"
- PCH_ADJ:0 "Pacaha"
- PROV4871:0 "Cowasuk"
- PROV4871_ADJ:0 "Cowasuk"
+ PCH:0 "パカハ"
+ PCH_ADJ:0 "パカハ"
+ PROV4871:0 "コワサック"
+ PROV4871_ADJ:0 "コワサック"
  PROV4872:0 "Wenrohonon"
  PROV4872_ADJ:0 "Wenrohonon"
  PROV4873:0 "Pegwaki"
@@ -121,10 +121,10 @@
  PROV4874_ADJ:0 "Westenhuck"
  PROV4875:0 "Welhikhane"
  PROV4875_ADJ:0 "Welhikhane"
- PROV4876:0 "Scahentowanen"
- PROV4876_ADJ:0 "Scahentowanen"
- PROV4877:0 "Nottoway"
- PROV4877_ADJ:0 "Nottoway"
+ PROV4876:0 "スカヘントワネン"
+ PROV4876_ADJ:0 "スカヘントワネン"
+ PROV4877:0 "ノットウェイ"
+ PROV4877_ADJ:0 "ノットウェイ"
  PROV4878:0 "Eno"
  PROV4878_ADJ:0 "Eno"
  PROV4879:0 "Kituwah"
@@ -137,8 +137,8 @@
  PROV4882_ADJ:0 "Etali"
  PROV4883:0 "Napochi"
  PROV4883_ADJ:0 "Napochi"
- PROV4884:0 "Houma"
- PROV4884_ADJ:0 "Houma"
+ PROV4884:0 "ホーマ"
+ PROV4884_ADJ:0 "ホーマ"
  PROV4885:0 "Avoyel"
  PROV4885_ADJ:0 "Avoyel"
  PROV4886:0 "Nasoni"
@@ -213,16 +213,16 @@
  PROV4920_ADJ:0 "Wadopabina"
  PROV4921:0 "Kuttawa"
  PROV4921_ADJ:0 "Kuttawa"
- PROV4922:0 "Pepikokia"
- PROV4922_ADJ:0 "Pepikokia"
- PROV4923:0 "Pacaha"
- PROV4923_ADJ:0 "Pacaha"
- PROV4924:0 "Laurentian Massif"
- PROV4924_ADJ:0 "Laurentian Massif"
- PROV4925:0 "White Mountains"
- PROV4925_ADJ:0 "White Mountains"
- PROV4926:0 "Adirondacks"
- PROV4926_ADJ:0 "Adirondacks"
+ PROV4922:0 "ペピコキア"
+ PROV4922_ADJ:0 "ペピコキア"
+ PROV4923:0 "パカハ"
+ PROV4923_ADJ:0 "パカハ"
+ PROV4924:0 "ローレンシア山塊"
+ PROV4924_ADJ:0 "ローレンシア山塊"
+ PROV4925:0 "ホワイト山地"
+ PROV4925_ADJ:0 "ホワイト山地"
+ PROV4926:0 "アディロンダック山地"
+ PROV4926_ADJ:0 "アディロンダック山地"
  PROV4927:0 "Blue Mountains"
  PROV4927_ADJ:0 "Blue Mountains"
  PROV4928:0 "Allegheny Front"
