--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -17,8 +17,8 @@
  COLONIAL_SUBJECTS:0 "植民地$LIST$を支配している"
  COLONIAL_SUBJECT_OF:0 "$LORD$の植民地"
  SUBJECT_COLONY_TARIFF_EFFICIENCY:0 "関税効率は§Y$VAL$%§!$VAL2$です。"
- SUBJECT_COLONY_TARIFF:0 "§Y$NAME$§!は毎月私たちに§Y$VAL$§!¤支払っています。"
- SUBJECT_COLONY_TARIFF_DESC:0 "植民地は関税率に基づき関税の一部を払う。関税率を増やすことも可能だが政府に反抗的な者達をも増やすことになるやもしれない。"
+ SUBJECT_COLONY_TARIFF:1 "Tariff Efficiency is applied to half §Y$NAME$§!'s production and trade, which is $INC|Y$¤ ducats, so they are paying us §Y$VAL$§!¤ each month."
+ SUBJECT_COLONY_TARIFF_DESC:1 "Colonies pay a part (based on tariff efficiency) of half of their production and trade income as tariff. This can be increased but may cause the colony to rebel."
  SUBJECT_INCOME:0 "§Y$NAME$§!は我々に毎月§Y$VAL$§!¤を支払います。"
  SUBJECT_INCOME_DESC:0 "あなたの$TYPES$はあなたへの毎月の税の内、$VALUE|Y$を支払うよう要求されます。"
  SUBJECT_NO_INCOME_DESC:0 "$TYPES$は我々に一銭たりとも税を支払いません。"
@@ -97,7 +97,7 @@
  MAPMODE_COLONIALANDTRADECOMPANYREGIONS_DESC:0 "植民地国家・交易会社設立可能な地方"
  NOT_IN_FEDERATION:0 "$NAME$は連邦加盟国ではありません。"
  federation_leader:0 "連邦指導国"
- FEDERATION_LEADER:0 "連邦指導国：$LEADER|G$"
+ FEDERATION_LEADER:1 "連邦指導国：$LEADER|Y$"
  FEDERATION_MEMBERS:0 "連邦加盟者：$MEMBERS|Y$"
  FEDERATION_LEADER_BONUS:0 "連邦の盟主は以下のボーナスを得ます：\n$BONUS$"
  FEDERATION_OF:0 "$LEADER$連邦"
@@ -109,7 +109,7 @@
  REQUEST_TO_JOIN_FEDERATIONREQDESC:0 "$ACTOR$は我々が連邦に参加することを要求しています。この要求を受け入れますか？"
  INVITE_TO_FEDERATIONTITLE:0 "連邦へ招待"
  INVITE_TO_FEDERATIONDESC:0 "彼らが我々の連邦に参加する意思があるか、$ACTOR$に尋ねますか？"
- INVITE_TO_FEDERATIONREQDESC:0 "$ACTOR$は連邦に加わるように我々に要求しています。我々は参加を望みますか？"
+ INVITE_TO_FEDERATIONREQDESC:1 "$ACTOR$ is asking us to join their Federation \"$FEDERATIONNAME$\". Do we want to join?"
  JOIN_FEDERATION:0 "連邦に参加"
  JOIN_FEDERATION_REQ_DESC:0 "$LEADER$の連邦に参加したいですか？"
  JOIN_FEDERATION_DESC:0 "連邦に参加"
@@ -129,7 +129,7 @@
  NEED_FEDERATION_LEADER_INVITE:0 "$COUNTRY$は他国を招待するには連邦のリーダーである必要があります。"
  NEED_FEDERATION_LEADER_REQUEST:0 "$COUNTRY$は他国を受け入れるには連邦のリーダーである必要があります。"
  ALREADY_IN_FEDERATION:0 "$COUNTRY$はすでに$LEADER$が率いる連邦の一員です。"
- REQUEST_JOIN_TO_LEADER:0 "参加の要求は連邦のリーダーである$LEADER$に送る必要があります。"
+ REQUEST_JOIN_TO_LEADER:1 "$WHO|Y$ must be leader of a Federation."
  REQUEST_LEAVE_TO_LEADER:0 "連邦を去るための要求は、リーダーである$LEADER$に送る必要があります。"
  humiliate:0 "屈辱を与える"
  humiliate_desc:0 "自国の目標は奴らの土地を征服し奪うことではなく、屈辱を与えて、誰が優れた部族か奴らに示すことです。"
