--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -6709,7 +6709,7 @@
  pis_fund_the_masnada:0 "マスナダへの投資"
  pis_fund_the_masnada_desc:1 "愛する自国を守るために、軍隊が必要だ。軍隊を作るには男が必要だ。適当なお金があれば、地元の自由傭兵団を説得して自国の軍に入隊させることができる。"
  MODIFIER_COAST_CAN_NOT_BE_RAIDED:0 "Blocks Slave Raids"
- horde_gov_ideas:0 "Horde Government Ideas"
+ horde_gov_ideas:0 "遊牧民アイデア"
  horde_gov_ideas_bonus:0 "Horde Ardor"
  horse_lords:0 "Horse-lords of the Steppes"
  horse_lords_desc:0 "The only true beast is of human nature. Horses have been born and raised among our children, and they have learned to be as noble and as ferocious as our own people. We recognize their harsh taming as our greatest pride, and they recognize us as their greatest lords."
@@ -6725,7 +6725,7 @@
  watchers_of_the_silk_road_desc:0 "We do not build, we do not trade. We take what we need... and sometimes more. Our warriors have kept an attentive watch upon foreign merchants and their techniques, and we now know the safest paths to transport our goods."
  a_magnanimous_empire:0 "A Magnanimous Empire"
  a_magnanimous_empire_desc:0 "The prosperous reign of the Great Khan was not only known for his fearful sword, but also for his exceptional piety towards those who wisely bended the knee to him. Those who welcome our tolerant empire shall be treated as part of it."
- theocracy_gov_ideas:0 "Divine Ideas"
+ theocracy_gov_ideas:0 "神聖アイデア"
  theocracy_gov_ideas_bonus:0 "Divine Passion"
  servants_of_god:0 "Servants of God"
  servants_of_god_desc:0 "Being a cog in this heavenly machinery is one of the greatest honors that a man can ever bear. Having our own god as Lord makes the heart of our people beat with thunderous acclaim."
