--- a/source/localisation/sikh_l_english.yml
+++ b/source/localisation/sikh_l_english.yml
@@ -51,7 +51,7 @@
  sikhism_flavor.10.t:0 "グル・ゴービンド・シング"
  sikhism_flavor.10.d:0 "テ・バハダの死によって、シーク教徒は再び政治的、宗教的な敵と向き合わなければなりませんでした。彼の息子、ゴービンド・ライは、シーク教徒を集結させて、グルのために命を捧げるものを集めました。数十年が経ち、信仰へと導くグルの儀式によってカールサーの誕生に至り、ゴービンド・ライはグル・ゴービンド・シングとして歴史に記されるでしょう。"
  sikhism_flavor.10.a:0 "カールサーは神の物であり、勝利は神の物である。"
- sikhism_flavor.11.t:0 "グル・グランサ・サヒーブ"
+ sikhism_flavor.11.t:0 "グル・グラント・サーヒブ"
  sikhism_flavor.11.d:0 "グル・ゴービンド・シングは亡くなりましたが、決して亡くなることのないものにグルの地位は引き継がれました。アディグラントとして知られる聖句集は、グル・アルジャンによって記され、その後のグルたちによって書き足され、ゴービンド・シングにシーク教徒を導く最後の後継者グル・グランサ・サヒーブとして指名されました。今後は、シーク教徒がグルに対してどんな質問をしても、この本に記された知識によって答えられるでしょう。"
  sikhism_flavor.11.a:0 "神に会いたいと思う人は、その讃美歌の中に神を見つけることができるでしょう。"
  sikhism_flavor.11.b:0 "グルは、心の欲望を満たす者です。"
@@ -63,5 +63,5 @@
  sikhism_flavor.13.dnanaknolonger:0 "グルと呼ばれる男が[Root.GetName]に到着しました。彼は、故郷から遠く離れた土地へ旅立ち、唯一神の言葉を広げるという天からの啓示を受けたのだと言っています。\n\n彼の信者たちは、この神こそが [Root.Owner.Religion.GetName]を含む全ての宗教の神であると言い張り、ナーナクこそが信仰の真理を明らかにすると主張しています。しかしながら、これらの教えが我々の儀式や伝統を拒絶し、人々を[Root.Owner.Religion.GetName]の正しい道から逸脱させることは疑いようがありません。"
  sikhism_flavor.13.a:0 "彼らが税を支払う限りは、彼らが信じたいものを信じることができる。"
  sikhism_flavor.13.b:1 "この男を[Root.GetName]から追い出せ！"
- guru_granth_sahib:0 "Guru Granth Sahib"
+ guru_granth_sahib:0 "グル・グラント・サーヒブ"
  desc_guru_granth_sahib:0 "The final, sovereign and eternal Guru following the lineage of the ten human gurus of Sikhism."
