--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1477,7 +1477,7 @@
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
  EST_VAL_ALLIANCE_ON_VC:1 "Alliance With $NAME$: §R$VAL|1$%§!"
- FAVORS_GAIN_TOOLTIP:0 "We gains $VAL|+=2$ favor(s) each month due to:\n$WHY$"
+ FAVORS_GAIN_TOOLTIP:1 "We gain $VAL|+=2$ favor(s) each month due to:\n$WHY$"
  FAVOR_ALLIANCE_TT:0 "Allied: Relative Strength: $VAL|+=2$"
  FAVOR_ALLIANCE_BLOCKED_TT:0 "Refused Offensive Wars: $VAL|+=2$"
  FAVOR_CURRY_FAVORS_REP_TT:0 "Currying Favors (Diplomatic Reputation): $VAL|+=2$"
