--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -963,8 +963,8 @@
  GOVERNMENT_DESELECTED_DESC:1 "Changes in your Country have led to the Government $REFORM|Y$ no longer being viable and it has now been abolished. It has been replaced with $REPLACEMENT|Y$."
  RAJPUT_DESC:2 "§Yラージプート§!階級に特別な権限を与えることにより、我々は彼らの精鋭の戦士たちへのアクセスを取得します。ラージプートは平均的な部隊よりも士気が高く、補充が安上がりで、訓練ボーナスを長期間保持できます。"
  CHANGE_REFORM_CANT_AFFORD:0 "$COST|R$を持っていないため、政府改革を変更できません。"
- REFORM_PROGRESS_DEV:4 "\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100-§Y$LOCALAUTONOMY$%§!)).\n"
- REFORM_PROGRESS_BUILDINGS:1 "\n $POINTS|G$ from Buildings"
+ REFORM_PROGRESS_DEV:5 "\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100+§Y$LOCALAUTONOMY$%§!)).\n"
+ REFORM_PROGRESS_BUILDINGS:1 "\n建造物から$POINTS|G$"
  COMPANY_PRICE_CALC:0 "基本：$BASE|Y0$¤\n自国の植民範囲 §G$RANGE|0$§!¤\n$MIN|0Y$¤以下になることはありません"
  CHARTER_COMPANY_WE_AT_WAR:0 "戦争時に勅許会社を求めることはできません"
  CHARTER_COMPANY_THEY_AT_WAR:0 "戦争中の国に勅許会社を求めることはできません"
