--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -227,7 +227,7 @@
  SLANDERMERCHANTSALREADYPRESENTDESC:0 "奴らの商人はすでに中傷されています。"
  SUPPORTREBELSTITLE:0 "反乱軍支援"
  SUPPORTREBELSDESC:0 "\n対象国の反乱軍を支援します。"
- SUPPORTREBELSDESCDERIVED:1 "Supporting a rebel faction will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and increase their chance of making progress towards an uprising each month by §Y$AMT$%§! for a period of $YEARS|Y$ years.\nYou will also support them during their uprising. If the rebels gain power they will become your ally."
+ SUPPORTREBELSDESCDERIVED:1 "反乱勢力を支援することは、$ADJ|Y$における諜報網規模を$COST|R$減少させ、$YEARS|Y$年間にわたり蜂起に向けた進捗の上昇率を毎月§Y$AMT$%§!増加させます。\nあなたは、彼らの蜂起中もまた支援できるでしょう。もし反乱軍が力を獲得すれば、彼らは同盟国となるでしょう。"
  SUPPORTREBELSDESCALREADYPRESENTDESC:0 "何者かがすでに対象国の反乱軍を支援しています。"
  SUPPORTREBELSDESCNOREBELSDESC:0 "支援できる反乱軍が存在しません。"
  SUPPORT_REBELS_OVERLORD:0 "あなたの属国の反乱軍を支援することはできません。"
@@ -246,7 +246,7 @@
  SOWDISCONTENTDESC:0 "対象国の住民の中に不満の種をまきます。"
  SOWDISCONTENTDESCDERIVED:0 "不満の種をまくと$ADJ|Y$における諜報網規模を$COST|R$減らし、以下の効果があります：\n$DESC$\n\nこれは$DATE|Y$まで続きます。"
  SOWDISCONTENTALREADYPRESENT:0 "対象国の住民の不満は、すでにかき混ぜられています。"
- UNTIL_DATE_EFFECTS:0 "\nUntil §Y$DATE$§!, this has the following effects:\n$DESC$."
+ UNTIL_DATE_EFFECTS:0 "\n§Y$DATE$§!までの間、以下の効果があります：\n$DESC$"
  AGITATE_EFFECTS:0 "§Y独立欲求§!：§G+$VAL$%§!"
  AGITATEFORLIBERTYALREADYPRESENTDESC:0 "何者かが彼らを自由に向けて扇動しています。"
  CANCEL_SOWDISCONTENTTITLE:0 "不満の種をまくことの中止"
@@ -492,7 +492,7 @@
  CELESTIAL_EMPIRE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$の天命争奪戦争"
  FORCE_MIGRATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$強制退去戦争"
  IN_WARGOAL_COST:1 "戦争目標の一部であり、$WHO|Y$のための追加の£dip£コストは発生しません！"
- NOT_IN_WARGOAL_COST:1 "Not part of the war goal and will result in an extra cost of §Y$COST$§!£dip Diplomatic power for $WHO|Y$!"
+ NOT_IN_WARGOAL_COST:1 "戦争目標の一部ではないため、$WHO|Y$に対して追加で§Y$COST$§!£dip  の外交力コストが発生します！"
  UNLAWFUL_TERRITORY_WARN:0 "§R不法な領土。皇帝が返還を要求してくる可能性があります。§!"
  UNLAWFUL_TERRITORY_WARN_DELAY:0 "この州は帝国の一部であり、あなたの中核州ではないため、領有した場合には不法な領土であると見なされます。"
  RELEASE_NATION_BY_WHOM:0 "$NEW_NATION$は$RELEASER$によって解放されます"
