--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -49,7 +49,7 @@
  estate_brahmins_brahmin_leadership:0 "バラモンの指導力"
  estate_brahmins_flexible_deities:0 "個人の主神の選択"
  estate_brahmins_flexible_deities_effect_tooltip:1 "§Y25§!の正統性を消費することで§Y20§!年ごとに個人の主神を変更する決断を有効にします。"
- brahmin_hindu_deity_decision_title:0 "個人の主神の選択"
+ brahmin_hindu_deity_decision_title:0 "Choose Personal Deity Again"
  brahmin_hindu_deity_decision_desc:0 "自分の選択を後悔する人も時にはいるだろう。若かりし頃にどの神に従うか決めたら一生それに縛られるのか？幸運なことに、バラモンの計らいでこの件に関しては限度はあるものの柔軟な取り扱いが可能だ。"
  decision_once_every_ten_years:0 "この決断は§Y10§!年毎に一回だけ選択できます。"
  estate_brahmins_loyalty_privilege:0 "バラモン議会"
@@ -158,7 +158,7 @@
  ESTATES_SEIZE_LAND_UNREST_DESC:0 "開発度の階級の占有は§R+5§!の§Y不穏度§!を受け取り、最も影響力のある階級は愚かにもあなたに対して武器を取ります。"
  IS_NOT_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級ではない。"
  IS_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級である。"
- ESTATE_LAND_SHARE_CHANGE_ENTRY:0 "$ESTATE$：$CHANGE|2Y=%$\n"
+ ESTATE_LAND_SHARE_CHANGE_ENTRY:0 "  $ESTATE$: $CHANGE|2Y=&$\n"
  APPLY_SPRITE_PACK_EFFECT:0 "§Y[GetName]§!は$SPRITE_PACK|Y$を使用します。"
  crown_land_level_0:0 "直轄地の所有権"
  crown_land_level_1:0 "直轄地の所有権"
