--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -31,7 +31,7 @@
  PAPAL_BULL_POSSIBLE:0 "§Y教皇勅書§!\n教皇の支配者は、教皇勅書を制定することができます。\n"
  PAPAL_BULL_EXPLANATION:1 "教皇勅書は教皇の支配者が国庫から支出することで制定され、現在の教皇が死亡するまで、全てのカトリック国に恩恵をもたらします！"
  JUSTIFY_TRADE_BASE:0 "交易競争の正当化のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
- FABRICATE_CLAIM_BASE:1 "§!請求権の捏造のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
+ FABRICATE_CLAIM_BASE:1 "The Cost for Fabricate Claim is based upon:\nBase Cost: $VAL|Y0$\n"
  FABRICATE_CLAIM_INSIDE_HRE:1 "神聖ローマ帝国内：$VAL|-=1%$\n"
  FABRICATE_ALREADY_CLAIMS:1 "すでに$CLAIM|Y$州を主張：$VAL|-=1%$\n"
  FABRICATE_CLAIM_CAPPED:0 "\n上限コストは$VAL|Y$です！"
@@ -323,8 +323,8 @@
  ASSIGN_HEIR_AT_WAR:0 "戦争中は、新しい後継者を指名できません！"
  ASSIGN_HEIR_NOT_NOMADS:0 "遊牧民は新しい後継者を指名できません！"
  ASSIGN_HEIR_REGENCY:0 "摂政中は、新しい後継者を指名できません！"
- ASSIGN_HEIR_PRESTIGE:0 "新しい後継者を指名するのに必要な$VAL|Y$の威信が不足しています"
- ASSIGN_HEIR_LEGITIMACY:0 "新しい後継者を指名するのに必要な$VAL|Y$の正統性が不足しています"
+ ASSIGN_HEIR_PRESTIGE:1 "You need at least $VAL|Y$ prestige to introduce a new heir - you currently have $CURRENT|Y$"
+ ASSIGN_HEIR_LEGITIMACY:1 "You need at least $VAL|Y$ legitimacy to introduce a new heir - you currently have $CURRENT|Y$"
  MILITARY_ACCESS_OWN:0 "$TAG|Y$がこの州を直接支配しています"
  MILITARY_ACCESS_SUBJECT:0 "この州は$TAG|Y$の従属国である$SUBJECT|Y$が所有しているため、軍事通行権が与えられています"
  MILITARY_ACCESS:0 "$TARGET|Y$は$TAG|Y$に軍事通行権を与えています"
@@ -733,9 +733,9 @@
  HINT_ZONEOFCONTROL_TITLE:0 "ZOC"
  HINT_ZONEOFCONTROL_TEXT:0 "守備兵のいる要塞は周囲の州にZOCを提供します。ZOCは敵軍の動きを制限し、彼らは最初に要塞を攻略しようとします。"
  VIEW_MISSION_TREE:0 "$COUNTRY|Y$のミッションツリーを表示します。"
- VIEW_MISSION_TREE_CURRENT:0 "現在ミッションツリーを表示しています。"
- VIEW_MISSION_TREE_OURS:0 "我が国のミッションツリーです。"
- VIEW_MISSION_TREE_SUBJECT:0 "我々の§Y従属国§!であるため、彼らのミッションツリーを表示できます。"
+ VIEW_MISSION_TREE_CURRENT:1 "You are currently viewing this mission tree."
+ VIEW_MISSION_TREE_OURS:1 "This is your country's mission tree."
+ VIEW_MISSION_TREE_SUBJECT:1 "You can view their missions as they are your §YSubject§!."
  ADJECTIVE_MISSION_TITLE:0 "$ADJ$のミッション"
  SECEDE_SUBJ_PROVINCES:0 "$WHO$は$WHAT$を$TO$に割譲し、独立欲求が$LD|-$変化します。"
  STATES_TAB_TOOLTIP:0 "州の管理"
