--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -756,7 +756,7 @@
  shinto_events.58.t:0 "阿弥陀仏"
  shinto_events.58.d:1 "Our long-standing support of the Ikko-Ikki has not been without friction and in many situations it is as if there are two parallel authorities in Japan. Still, the Ikko-Ikki would arguably not have come as far as they have without our protection according to many.\nWith times of civil strife behind us many expect us to elevate the leaders of the Ikko-Ikkis to high positions and make their faith more officially sponsored by the state. To many this would be a grave insult to our old traditions however..."
  shinto_events.58.a:0 "いや、我々は祖先の代からの伝統に背を向けることはできない。"
- shinto_events.58.b:1 "Amitabhaya. We must embrace their beliefs and enshrine them into our legal system."
+ shinto_events.58.b:1 "南無阿弥陀仏。彼らの信念を受け入れ、我が国の法制度に記すべきだ。"
  MAX_TRIBUTE_REACHED:0 "\n毎年$AMOUNT|Y$ $SYMBOL$以上の貢物を支払うことはできません。"
  CHANGE_TRIBUTE_COOLDOWN:0 "あなたは毎月一回だけ貢物を変更できます。あなたは$UNTIL|Y$に再びそれを行うことができます。"
  SWITCH_HARMONIZATION_DESC:0 "これはあなたの$CURRENT|Y$との調和（現在の進捗$PROGRESS|%|Y|0$）を§Rキャンセル§!するでしょう。\n"
