--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -136,13 +136,13 @@
  CONFIRMGREATPROJECT_BOOST_MANPOWER_TEXT:0 "Are you sure you wish to spend $MANPOWER$ manpower to bring forward completion by $DAYS$ days?"
  CONFIRMGREATPROJECT_BOOST_MONEY_TEXT:0 "Are you sure you wish to spend $COST|Y$¤ to bring forward completion by $DAYS$ days?"
  BUILD_GREAT_PROJECT:0 "Starts the construction of the $TYPE$ $NAME|Y$."
- TIER_0_DESCRIPTION:0 "Insignificant"
- TIER_1_DESCRIPTION:0 "Noteworthy"
+ TIER_0_DESCRIPTION:0 "無価値"
+ TIER_1_DESCRIPTION:0 "魅力的"
  TIER_2_DESCRIPTION:0 "Significant"
- TIER_3_DESCRIPTION:0 "Magnificent"
+ TIER_3_DESCRIPTION:0 "金字塔"
  MATCHING_TIER_DESCRIPTION:0 "Your $TYPE$ is currently viewed as $TIERDESCRIPTION$. These are your current benefits:"
  BETTER_TIER_DESCRIPTION:0 "If you improve your $TYPE$ to $TIERDESCRIPTION$ level, you can benefit from:"
- WORSE_TIER_DESCRIPTION:0 "Your $TYPE$ has surpassed this level."
+ WORSE_TIER_DESCRIPTION:1 "$TIERDESCRIPTION$: Your $TYPE$ has surpassed this level."
  DOESNT_EXIST_TIER_DESCRIPTION:0 "At $TIERDESCRIPTION$ level, the $TYPE$ would give these benefits:"
  ON_UPGRADED_EVENT_DESC:0 "§YWhen upgraded§!:\n$EFFECT$\n"
  EXPENSEGREATPROJECTS:0 "Great Projects"
@@ -159,7 +159,7 @@
  CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT:0 "Removal of a $TYPE$ was canceled"
  CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT_WHAT:0 "to cease the relocation of a $TYPE$ in our country"
  CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT_EFFECT:0 "The work on removing a $BUILDING|Y$ from $PROVINCE$ has stopped."
- MOVE_GREAT_PROJECT:0 "Starts the relocation of the $TYPE$ $NAME|Y$."
+ MOVE_GREAT_PROJECT:1 "Starts the relocation of the $TYPE$ $NAME|Y$ to $PROVINCE|Y$."
  CANCEL_GREAT_PROJECT_MOVE_PROGRESS:0 "Are you sure you wish to stop $BUILDING$ from being moved from $FROMPROVINCE$ to $TOPROVINCE$? $PERCENTAGE_RETURNED|%1Y$ of the investment will be returned."
  CANNOT_MOVE_GREAT_PROJECT_NO_PATH:0 "You do not have a clear route from $FROMPROVINCE|Y$ to $TOPROVINCE|Y$."
  CANNOT_BUILD_GREAT_PROJECT_WRONG_LOCATION:0 "Cannot build this here."
@@ -187,7 +187,7 @@
  FREE_MERCHANT:0 "You have an unassigned merchant."
  FREE_MERCHANTS:0 "You have $NUMBER$ unassigned merchants."
  FORT_MAIN_LOCKED:0 "You cannot toggle fort maintenance when it is locked."
- CANNOT_DRAFT_WRONG_REFORMS:0 "You cannot draft transport ships without the Plutocratic monarchy reform."
+ CANNOT_DRAFT_WRONG_REFORMS:1 "You cannot draft transport ships without the Eastern Plutocratic monarchy reform."
  CANNOT_DRAFT_NO_AVAILABLE_UNITS:0 "You can only draft units up to $PERCENTAGE$% of your force limit ($MAXUNITS$ units). You currently have $CURRENTUNITS$ units."
  CANNOT_DRAFT_UNIT_TYPE:0 "You cannot draft $TYPE$ units."
  mechanic_allow_draft_transport_ships_yes:0 "Allows cheap drafting of transport ships."
@@ -503,8 +503,8 @@
  REDUCED_OPINION_FAVOR_DECLINED_BTN1:0 "Too bad"
  REDUCED_OPINION_FAVOR_DECLINED_BTN2:0 "Too bad"
  REDUCED_OPINION_FAVOR_DECLINED_BTN3:0 "Go to"
- REDUCE_OPINION_CANNOT_COST:0 "§RYou need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to return $PROVINCE$.§!"
- REDUCE_OPINION_CANNOT_OPINION:0 "§RYou need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to return a core province.§!"
+ REDUCE_OPINION_CANNOT_COST:1 "§RYou need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to reduce their opinion of another Country.§!"
+ REDUCE_OPINION_CANNOT_OPINION:1 "§RYou need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to reduce their opinion of another Country.§!"
  REDUCE_OPINION_FAVOR_DESC2:0 "Spend $FAVOR|Y$ Favors to get them to reduce their opinion of another Country."
  REDUCE_OPINION_REQDESC:0 "$ACTOR$ is asking us to lower our opinion of $WHOM$ in exchange for favors. Do you accept?"
  REDUCE_OPINIONTITLE:0 "Reduce Opinion"
@@ -934,3 +934,61 @@
  HAS_OR_BUILDING_FLAGSHIP:0 "Country has or is building a Flagship"
  HAS_NOT_OR_BUILDING_FLAGSHIP:0 "Country does not have a Flagship and is not building one"
  GREAT_PROJECT_CANNOT_BE_MOVED:0 "$GREATPROJECT|Y$ cannot be moved, it is too large."
+ CLAIM_STRENGTH_TOOLTIP:0 "$NAME|Y$ has a claim strength of $VAL|Y$. This will become his Legitimacy when he ascends to the throne."
+ CLAIM_STRENGTH_INCREASE_TOOLTIP:0 "Claim strength increases by $AMOUNT|Y$ per month."
+ MOVE_GREAT_PROJECT_EXPLANATION:0 "It will cost $CASH|Y$¤ to move $GREATPROJECT|Y$ to your capital. This is based on a distance of $DIST$ and an estimate of $DAYS$ days to move each unit of distance, multiplied by a cost of $COSTPERDAY$¤ per day to move it."
+ TRADE_FAVORS_FOR_HEIR_CANNOT_DYNASTY_LOCKED:0 "§Y$COUNTRY$§! cannot have an heir from a different Dynasty."
+ TRADE_FAVORS_FOR_HEIR_CANNOT_STATES_GENERAL:0 "§Y$COUNTRY$§! cannot have an heir with $LEFT$ vs $RIGHT$ Mechanics."
+ CANNOT_EXTEND_REGENCY_NO_HEIR:0 "You cannot extend a Regency when there is no heir, the Regency will automatically end when appropriate."
+ COHESION_NO_NEIGHBOURING_COLONIZER:0 "No colonizers neighbouring federation: $VALUE|+=1$\n"
+ COHESION_FEDERATION_NO_MEMBER_STRONGER:0 "No member is stronger than Federation Leader: $VALUE|+=1$\n"
+ COHESION_DESC:0 "Federal Cohesion is increased by having members of the same Culture or Cultural Group as the leader, and by having more advanced colonizing neighbours. It is reduced by having nations stronger than the leader and by each advancement made."
+ pillaged_a_state_for_us:0 "Pillaged a state for us"
+ PAL_REVOLUTIONARY_NAME:0 "The Revolutionary Palatinate"
+ PAL_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Palatinate"
+ PAP_REVOLUTIONARY_NAME:0 "The Revolutionary Papal State"
+ PAP_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Papal State"
+ KNI_REVOLUTIONARY_NAME:0 "The Revolutionary Knights"
+ KNI_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Knights"
+ LOI_REVOLUTIONARY_NAME:0 "The Revolutionary Isles"
+ LOI_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Isles"
+ colonial_core:0 "Colonial Core"
+ RECOMMENDED_DLCS:0 "Recommended DLCs"
+ RECOMMENDED_COUNTRIES:0 "Recommended Countries"
+ DLC_FEATURES:0 "Features"
+ DLC_DESCRIPTION:0 "Description"
+ CANNOT_MOVE_GREAT_PROJECT_TOO_BIG:0 "The $GREATPROJECT$ is too big to move."
+ NO_REBELS_TO_SUPPORT:0 "There are no rebels in this country that are ready to receive our support."
+ AGGRESSIVE_EXPANSION_PRIMITIVES:0 "Primitives"
+ LEAVE_FEDERATION_DESC:0 "Leave the Federation."
+ INVITE_TO_JOIN_FEDERATION_DESC:0 "Invite to join the Federation."
+ KICK_FROM_FEDERATION_DESC:0 "Kick out of the Federation."
+ REQUEST_JOIN_ALREADY_LEADER:0 "$WHO|Y$ is already the leader of a Federation."
+ ENEMY_INVASION_IMMINENT_NEAR:0 "$UNIT|Y$ near $PLACE|Y$"
+ FEDERATION_DESIRABILITY_ALREADY_LEADER_OF_DIFFERENT_FEDERATION:0 "$WHO|Y$ is already leader of $FEDERATION|Y$."
+ FEDERATION_DESIRABILITY_STRONGER_THAN_LEADER:0 "$WHO|Y$ is stronger than the Federation leader $LEADER|Y$."
+ FEDERATION_DESIRABILITY_DESIRE_TO_STAY_PUT:0 "Desire to stay in $FEDNAME$: "
+ LOSE_HEGEMON_STATUS:0 "$WHO|Y$ will lose their Hegemon status."
+ ANCESTOR_LEVEL_MOD:0 "Ancestor $NAME$ is $PERSONALITY$"
+ ANCESTOR_LEVEL_BONUS:0 "Ancestor $NAME$ level bonus"
+ FEDERATION_DESIRABILITY_DONT_WANT_TO_CHANGE:0 "All that paperwork of changing Federation: "
+ NO_TRADE_COMPANIES:0 "No Trade Companies"
+ CURRENT_GURU:0 "Current Guru"
+ NEXT_GURU:0 "Next Guru"
+ CURRENT_GURU_DESC:0 "Your country currently gets the following benefits from $NAME$:\n\n$EFFECTS$"
+ NEXT_GURU_DESC:0 "When the current Guru retires, $NAME$ will step up to replace him."
+ PICK_TEACHING_DESC:0 "Add a teaching to permanently affect your country at a cost of some Monarch points."
+ IF_CONDITIONS_MET:0 "If the following conditions are met:"
+ THEN_THIS:0 "...then these effects will happen:"
+ FEDERATION_COOLDOWN:0 "$COUNTRY$ can only join a Federation once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ FEDERATION_LEADER_OPINION:0 "Negative opinion of Federation Leader: "
+ COHESION_FEDERATION_MEMBER_STRONGER_WRONG_CULTURE:0 "$NAME|Y$ is stronger than Federation Leader and of a different Culture: $VALUE|+=1$\n"
+ COHESION_FEDERATION_SAME_CULTURE_MEMBERS_BONUS:0 "Bonus for $NUM$ members of the same Culture as the Leader: $VAL$\n"
+ IS_ALREADY_ANCESTOR_PERSONALITY:0 "We already revere an Ancestor with $PERSONALITY|Y$ attributes."
+ COLONY_CHANGES:0 "Colony changes"
+ GOODS_CHANGE_RANDOM:0 "New Trade Goods will now be produced in $WHERE|Y$.\n"
+ COUNTRY_MISSION_OTHER:0 "This mission is only available to $COUNTRY$."
+ CULTURE_ALREADY_SELECTED:0 "$CULTURE|Y$ is already selected"
+ SELECT_CULTURE_DESIGNER:0 "Select $CULTURE|Y$ as your Primary Culture"
+ CANNOT_CONCENTRATE_DEVELOPMENT_WRONG_SUBJECT_TYPE:0 "$SUBJECTTYPE|Y$ subjects cannot have their development concentrated"
+ SELECT_EDICT_FOR_PROVINCE:0 "Select Edict for $PROVINCE$:"
