Save/Update files [ci skip]

--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -138,7 +138,7 @@
  mnd_siam_japan_desc:0 "The rulers of Japan are notoriously difficult to befriend, distrustful as they are of foreign influence. But if we can establish a successful embassy we may be able to attract some of the dreaded Samurai to fight for us."
  japanese_mercs_flag:0 "The §YJapanese Volunteers§! mercenary company will become available for duty"
  merc_japanese_volunteers:0 "Japanese Volunteers"
- siam_mandala_modifier:0 "Great Mandala"
+ siam_mandala_modifier:0 "大マンダラ"
  desc_siam_mandala_modifier:0 "Using the mandala as the model for our government, we have created a truly harmonious nation where all know their place."
  siam_monument_modifier:0 "Monument Builders"
  desc_siam_monument_modifier:0 "We have proven ourselves as great architects and masters of the logistics of grand construction."
@@ -313,7 +313,7 @@
  mnd_maj_negara_agung_desc:0 "To expand the borders of our empire and bring new peoples under our rule is a great endeavor. But we must also look to the good of our core territories, the negara agung. Our capital must be a great city, a hub of commerce and culture from all over Nusantara."
  mnd_maj_chakravarti_title:0 "転輪聖王"
  mnd_maj_chakravarti_desc:0 "An ideal monarch rules an ideal realm, the material and spiritual center of the world. Majapahit shall become this realm."
- mnd_maj_candi_shrines_title:0 "チャンディ式神殿"
+ mnd_maj_candi_shrines_title:0 "チャンディ式寺院"
  mnd_maj_candi_shrines_desc:0 "Scattered throughout Nusantara are a number of ruined or abandoned Candi temples of mixed Hindu and Buddhist worship. We must restore these temples to renew our faith."
  mnd_maj_porch_of_mecca_title:0 "メッカの玄関"
  mnd_maj_porch_of_mecca_desc:0 "The Aceh region has become the staging point for the spread of Islam in Nusantara. We must stamp out this new faith and restore Aceh to Majapahit."
@@ -535,7 +535,7 @@
  mnd_dai_universities_desc:0 "The examination system is robust, yet there are many who are never able to participate due to illiteracy. We should improve the standard of education in our country."
  mnd_dai_imperial_citadel_title:0 "帝国の城郭"
  mnd_dai_imperial_citadel_desc:0 "We should ensure that our capital is a place of glory and riches, where a great imperial citadel projects the power of the state."
- dai_discipline:0 "Control of the Army"
+ dai_discipline:0 "陸軍の掌握"
  desc_dai_discipline:0 "The army is no longer controlled by noble families serving their own interests."
  dai_curtailed_nobles:0 "Curtailed Nobles"
  desc_dai_curtailed_nobles:0 "We have curtailed the power of the nobility."
@@ -545,9 +545,9 @@
  desc_dai_discipline_permanent:0 "Our many campaigns in South-East Asia have taught us the value of a disciplined army."
  dai_japan_relations:0 "日本との関係"
  desc_dai_japan_relations:0 "We have achieved a strong relationship with the rulers of Japan."
- dai_arms_trade:0 "Purchase of European Arms"
+ dai_arms_trade:0 "ヨーロッパ製武器の購入"
  desc_dai_arms_trade:0 "We have negotiated the purchase of artillery from the European powers."
- dai_harmonization:0 "Religious Harmony"
+ dai_harmonization:0 "宗教の調和"
  desc_dai_harmonization:0 "There is room in our state for many faiths, so long as they conform to the state."
  dai_learning:0 "Monastic Learning"
  desc_dai_learning:0 "The Buddha has much to teach us."
