--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -860,7 +860,7 @@
  PROV881:1 "Tsiahahéndé"
  PROV882:1 "Mashgaléndé"
  PROV883:1 "Tche Sha"
- PROV884:1 "Auia"
+ PROV884:1 "アウイア"
  PROV885:1 "Gulgahén"
  PROV886:0 "ウェーコ"
  PROV887:1 "Tickanwa'tic"
@@ -902,11 +902,11 @@
  PROV923:0 "ペンサコーラ"
  PROV924:1 "Tawasa"
  PROV925:1 "コウェタ"
- PROV926:1 "Eyeish"
+ PROV926:1 "エイェイシ"
  PROV927:0 "ティムクア"
  PROV928:0 "アパラチー"
  PROV929:0 "グアル"
- PROV930:1 "Kasihta"
+ PROV930:1 "カシタ"
  PROV931:0 "クーサ"
  PROV932:1 "Issati"
  PROV933:1 "Iswa"
@@ -1218,7 +1218,7 @@
  PROV1239:0 "バヌアツ"
  PROV1240:0 "ハワイ"
  PROV1241:0 "キリバス"
- PROV1242:1 "ビティ・レブ"
+ PROV1242:1 "ビティレブ"
  PROV1243:0 "サモア"
  PROV1244:0 "トゥアモトゥ諸島"
  PROV1245:0 "マノクワリ"
@@ -2649,8 +2649,8 @@
  PROV2685:0 "ガヨ"
  PROV2686:0 "ビンタン"
  PROV2687:0 "パクアン"
- PROV2688:1 "Sumedang"
- PROV2689:1 "Pekalongan"
+ PROV2688:1 "スメダン"
+ PROV2689:1 "ペカロンガン"
  PROV2690:1 "Kotagede"
  PROV2691:0 "クディリ"
  PROV2692:0 "マドゥラ"
@@ -2687,10 +2687,10 @@
  PROV2723:0 "ヨススダルソ"
  PROV2724:0 "アスマット"
  PROV2725:0 "アルー"
- PROV2726:0 "マルガ"
+ PROV2726:0 "マルガナ"
  PROV2727:0 "ミナン"
  PROV2728:0 "ティウィ"
- PROV2729:0 "ヨールン"
+ PROV2729:0 "ヨルング"
  PROV2730:0 "アウグムティム"
  PROV2731:0 "グーグ・イミディル"
  PROV2732:0 "ウルグルカバ"
