--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -675,6 +675,6 @@
  dlc105_reason_europe:0 "「§YEmperor Music Pack§!」は近世ヨーロッパからインスピレーションを得た5つの新しい楽曲を追加します。"
  dlc105_reason_europe_reason:0 "§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
  DLC_dlc106_TOOLTIP_INSTANT:0 "Leviathan"
- DLC_dlc106_TOOLTIP_DELAYED:0 "- South East Asia mission trees\n- Monuments\n- Expanded colonial nations\n- Curry favors\n- Concentrate development\n- Centralize state\n- Expanded regencies\n- Totemism\n\nAdditional Features:\n- Mandala government reform\n- Pillage capital\n- Draft transports"
- LANDING_dlc106_TEXT:0 "- South East Asia mission trees\n- Monuments\n- Expanded colonial nations\n- Curry favors\n- Concentrate development\n- Centralize state\n- Expanded regencies\n- Totemism\n\nAdditional Features:\n- Mandala government reforms\n- Pillage capital\n- Draft transports"
+ DLC_dlc106_TOOLTIP_DELAYED:0 "-東南アジアのミッションツリー\n-記念碑\n-拡張された植民地国家\n‐好感度を稼ぐ\n‐開発度の集中\n‐中央集権国家\n‐拡張された摂政政治\n‐トーテム信仰\n\n追加機能：\n‐マンダラ政府改革\n‐首都の略奪\n‐輸送船の徴集"
+ LANDING_dlc106_TEXT:0 "-東南アジアのミッションツリー\n-記念碑\n-拡張された植民地国家\n‐好感度を稼ぐ\n‐開発度の集中\n‐中央集権国家\n‐拡張された摂政政治\n‐トーテム信仰\n\n追加機能：\n‐マンダラ政府改革\n‐首都の略奪\n‐輸送船の徴集"
  LANDING_dlc106_FLAVOR_TEXT:0 "Picture a capital city that shines like a gemstone, improved by the wealth drawn from the hinterland - decorated by riches demanded from vassals. A capital not of a territorial empire, but of a compact and concentrated state. Picture it and then make it so in Europa Universalis IV: Leviathan.\n\n Leviathan offers new tools that allow you to play “tall” with more focused realms with a few centers of power. It also has a host of other changes to well-established game features like Regencies and Colonies."
