--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -142,7 +142,7 @@
  TIER_3_DESCRIPTION:0 "金字塔"
  MATCHING_TIER_DESCRIPTION:0 "Your $TYPE$ is currently viewed as $TIERDESCRIPTION$. These are your current benefits:"
  BETTER_TIER_DESCRIPTION:0 "If you improve your $TYPE$ to $TIERDESCRIPTION$ level, you can benefit from:"
- WORSE_TIER_DESCRIPTION:1 "$TIERDESCRIPTION$: Your $TYPE$ has surpassed this level."
+ WORSE_TIER_DESCRIPTION:1 "$TIERDESCRIPTION$：あなたの$TYPE$はこのレベルを達成しています。"
  DOESNT_EXIST_TIER_DESCRIPTION:0 "At $TIERDESCRIPTION$ level, the $TYPE$ would give these benefits:"
  ON_UPGRADED_EVENT_DESC:0 "§YWhen upgraded§!:\n$EFFECT$\n"
  EXPENSEGREATPROJECTS:0 "Great Projects"
@@ -184,7 +184,7 @@
  FORT_MAINTENANCE_LOCK_OFF:0 "The fort in this province can be mothballed by this interface or by the \"Mothball all forts\" button in the Military tab."
  FORT_MAINTENANCE_LOCK_ON_ACTION:0 "§GClick to allow mothballing forts§!"
  FORT_MAINTENANCE_LOCK_OFF_ACTION:0 "§GClick to never mothball forts§!"
- FREE_MERCHANT:0 "You have an unassigned merchant."
+ FREE_MERCHANT:0 "割り当てられていない商人がいます。"
  FREE_MERCHANTS:0 "You have $NUMBER$ unassigned merchants."
  FORT_MAIN_LOCKED:0 "You cannot toggle fort maintenance when it is locked."
  CANNOT_DRAFT_WRONG_REFORMS:1 "You cannot draft transport ships without the Eastern Plutocratic monarchy reform."
@@ -215,7 +215,7 @@
  LEDGER_DESTROYED:0 "Destroyed"
  NOTBUILT:0 "Not built."
  concentrated_our_development:0 "Stole our provinces' development"
- CONFIRM_CONSOLIDATE_DEVELOPMENT_TITLE:1 "Concentrate development into our lands"
+ CONFIRM_CONSOLIDATE_DEVELOPMENT_TITLE:1 "領土の開発度を集中"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT:1 "Channel development from $NAME$ for our own needs. This state will lose $DEVELOPMENT|Y$ development. Much of the development lost will end up in our capital, some will be distributed amongst our other states, some will be lost. In total, we will gain $DEVGAINED|Y$ development."
  CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT:0 "This will have the following effects on your subjects:"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT_EFFECT:0 "  $SUBJECT|Y$:\n    Liberty Desire: $LIBERTYDESIRE|R$\n    Opinion: $OPINION|R$"
@@ -730,7 +730,7 @@
  TRADE_FAVORS_FOR_HEIR_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for installing a member of our dynasty as their heir."
  TRADE_FAVORS_FOR_HEIR_DESC:0 "We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors."
  X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$ is a subject of $OVERLORD|Y$."
- DIPLOMACYACTION_CATEGORY_favors:0 "Favors"
+ DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
  WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "Trade Favors For Trust"
  WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "When we ask a country to increase their trust in us as a Favor."
  WE_TRADE_FAVORS_FOR_TRUST_HEADER:0 "$MESSENGER$"
@@ -859,7 +859,7 @@
  CANNOT_CONVERT_NOT_RELIGION_OR_SECONDARY_RELIGION:0 "$NAME$ is not a §Y$RELIGION$§! or a §Y$SECONDARYRELIGION$§! province, so it is not possible to change culture. Send some missionaries first."
  NO_GARRISON:0 "There is no garrison here."
  PILLAGE_CAPITAL_CANNOT_NO_DEV:0 "Their capital is too poor to pillage."
- NO_FEDERATION_TEXT:0 "You are not a member of a Federation."
+ NO_FEDERATION_TEXT:0 "あなたは連邦の一員ではありません。"
  NO_CURR_ESTATES_TT:0 "You do not currently have any estates."
  FEDERATION_ADVANCEMENT_TITLE:0 "New Federation Advancement"
  FEDERATION_ADVANCEMENT_SETUP:0 "When a federation you are in gains a new advancement."
@@ -953,10 +953,10 @@
  LOI_REVOLUTIONARY_NAME:0 "The Revolutionary Isles"
  LOI_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Isles"
  colonial_core:0 "Colonial Core"
- RECOMMENDED_DLCS:0 "Recommended DLCs"
- RECOMMENDED_COUNTRIES:0 "Recommended Countries"
- DLC_FEATURES:0 "Features"
- DLC_DESCRIPTION:0 "Description"
+ RECOMMENDED_DLCS:0 "推奨されるDLC"
+ RECOMMENDED_COUNTRIES:0 "推奨される国家"
+ DLC_FEATURES:0 "特徴"
+ DLC_DESCRIPTION:0 "説明"
  CANNOT_MOVE_GREAT_PROJECT_TOO_BIG:0 "The $GREATPROJECT$ is too big to move."
  NO_REBELS_TO_SUPPORT:0 "There are no rebels in this country that are ready to receive our support."
  AGGRESSIVE_EXPANSION_PRIMITIVES:0 "Primitives"
