--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -32,14 +32,14 @@
  COHESION_FEDERATION_ADVANCEMENT:0 "§Y$NUM$ Federal Advancements§!: $VAL|+=1$\n"
  MODIFIER_SETTLE_COST:0 "Settle Cost"
  MODIFIER_MONTHLY_FEDERATION_FAVOR_GROWTH:0 "Monthly Federation Favor Growth"
- federal_constitution:0 "Federal Constitution"
- unified_warbands:0 "Unified Warbands"
- mutual_trust:0 "Mutual Trust"
- joint_grain_depots:0 "Joint Grain Depots"
- pax_americana:0 "Pax Americana"
- united_resistance:0 "United Resistance"
- chartered_settlements:0 "Chartered Settlements"
- shared_knowledge:0 "Shared Knowledge"
+ federal_constitution:0 "連邦憲法"
+ unified_warbands:0 "統一された略奪団"
+ mutual_trust:0 "相互信頼"
+ joint_grain_depots:0 "共同穀物拠点"
+ pax_americana:0 "パクス・アメリカーナ"
+ united_resistance:0 "統一された抵抗運動"
+ chartered_settlements:0 "認められた定住地"
+ shared_knowledge:0 "知識の共有"
  FEDERATION_ADVANCEMENT_ALREADY_PICKED:0 "§RAdvancement already picked.§!\n"
  FEDERATION_LEADER_LOW_COHESION:0 "\nIf Federation Cohesion drops to §Y0%§! then you risk a leadership change. The new leader will be whoever is strongest in the federation, if that is the same country then the federation will disband."
  RELIGION_DONT_HAVE_ANCESTORS:1 "Your religion doesn't have Ancestors."
@@ -58,25 +58,25 @@
  MUST_BE_IN_TRIBAL_LAND_TO_SETTLE:0 "Must be in Tribal Land to settle."
  TRIBAL_LAND_OF:0 "\nTribal land of $WHO|Y$.\n"
  FEDERATION_PROV_TOOLTIP:0 "\nPart of the $NAME|Y$."
- native_chiefdom_reform:0 "Chiefdom"
- native_federation_reform:0 "Federation"
- native_clan_council_reform:0 "Clan Council"
- native_martial_tradition_reform:0 "Martial Tradition"
- native_oral_tradition_reform:0 "Oral Tradition"
+ native_chiefdom_reform:0 "酋長国"
+ native_federation_reform:0 "連邦"
+ native_clan_council_reform:0 "氏族評議会"
+ native_martial_tradition_reform:0 "戦争の伝統"
+ native_oral_tradition_reform:0 "口頭伝承"
  native_land_tradition_reform:0 "Land Tradition"
  native_war_band_reform:0 "War Band"
  native_seasonal_travel_reform:0 "Seasonal Travel"
- native_settle_down_reform:0 "Settle Down"
- native_codified_power_reform:0 "Codified Power"
- native_trading_with_foreigners_reform:0 "Trading with Foreigners"
+ native_settle_down_reform:0 "定住"
+ native_codified_power_reform:0 "法典化"
+ native_trading_with_foreigners_reform:0 "外国人との交易"
  native_becomes_monarchy_reform:0 "Dynastic Lineage"
  native_becomes_republic_reform:0 "Rule by the Public"
  native_becomes_theocracy_reform:0 "State of Faith"
  native_becomes_horde_reform:0 "The Great Plains calls to us"
- tribe_organization:0 "Tribe Organization"
- story_tradition:0 "Story Tradition"
- legal_basis:0 "Legal Basis"
- national_identity:0 "National Identity"
+ tribe_organization:0 "部族組織"
+ story_tradition:0 "物語の伝統"
+ legal_basis:0 "法的基盤"
+ national_identity:0 "国家の独自性"
  mechanic_enable_settled_mechanics_yes:0 "Can settle development into tribl land"
  mechanic_enable_tribal_grazing_no:0 "No longer graze on land causing devastation"
  MIGRATORY_TRIBE_CULTURE_CONV:0 "§RMigratory Tribes can't convert culture.§!"
@@ -118,12 +118,12 @@
  MIGRATION_BASE_COST:0 "Base: §Y50§!\n"
  MIGRATION_MULTIPLIER:0 "Outside of Tribal Land: §Yx§!$MULT|Y$\n"
  MIGRATION_MODIFIER:0 "This is further modified by:\n$MOD$"
- NATIVE_TRIBES_CANT_COLONISE:0 "§RNative Tribes can't colonise.§!"
+ NATIVE_TRIBES_CANT_COLONISE:0 "§R先住民部族は入植できません。§!"
  FEDERATION_ADVANCEMENT_NO_FEDERATION:0 "§RNot part of a Federation.§!"
  NOT_MIGRATORY_TRIBE_TRIGGER:0 "Not Migratory Tribe\n"
  MIGRATORY_TRIBE_TRIGGER:0 "Is Migratory Tribe\n"
- native_diplomatic_cermonies_reform:0 "Diplomatic Ceremonies"
- native_hereditary_reform:0 "Hereditary Rule"
+ native_diplomatic_cermonies_reform:0 "外交儀礼"
+ native_hereditary_reform:0 "世襲による統治"
  SETTLE_PROVINCE_NO_DEVELOPMENT:0 "§RNot enough tribal development to settle province.§!"
  BUILDING_SLOT_NATIVE_IN_NON_NATIVE:0 "Natives can't build in non-native land"
  BUILDING_SLOT_NON_NATIVE_IN_NATIVE:0 "Non-natives can't build in native land"
