--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -245,7 +245,7 @@
  seven_cities_events.302.d:0 "悲劇的な知らせだ。なんと我らがコンキスタドールが死亡した！探検隊は、カヌーで川を遡上している時に、原住民たちに遭遇した。好戦的な部族は彼らに陸に上がるよう要求し、何人かがそれに従った。コンキスタドールの抗議にもかかわらず、彼らは武器を奪われ、衣服を剥がれて裸にされた。コンキスタドールは命令を拒否し、弾丸で穴だらけになって死んだ。探検隊のメンバーは、彼の体が陸地に持ち込まれ、バラバラに叩き切られるのを見た。生き残ったのは一人だけで、走って逃げ出したと語った。原住民を振り切るため、彼は命がけで走り続けた。裸で、疲労し、出血もしていたが、生存者を追う者は数マイル後ろにいる一人の攻撃者だけであった。彼は孤独を克服し、$PROVINCENAME$でようやく安全な場所を見つけた。"
  seven_cities_events.302.a:0 "何と酷い！"
  seven_cities_events.303.t:0 "方向音痴"
- seven_cities_events.303.d:0 "我々は、コンキスタドールの方向音痴に最初の2回の迷子の時点で気づくべきだった。1回目は2頭の荷馬を回収するため16日間も迷子になった。もしその馬がぶどうやウサギを積んでいなければ飢え死にしていたかもしれない。彼が後に我々に語ったところによると、探検隊の後ろにいると思いこんだ彼は、追いつくためにスピードを上げ、迷走の末飢えに勝てず、商人を探すために川の下流へと進路を変えたのだそうだ。結局探検隊は彼を見つけるために最高のハンターを探索に送り出し、なんとか再会することができた。2回目は3本の支流を持つ川で、支流の一つを探索してくると言いそのまま3日間姿を消した。探検隊は再び彼を見つけるために熟練ハンターを送るはめになった。のちに彼は支流を逆戻りし我々のいる道に戻ってくるための冒険譚を語った。これらの経験によって探検隊のクルーは$PROVINCENAME$のさらなる領域を探検するにあたって決してこのコンキスタドールに単独行動をさせないと決心したが、結局それも意味がなかった。ほんの数分後、彼は再び消えた。"
+ seven_cities_events.303.d:0 "我々は、コンキスタドールの方向音痴に最初の2回の迷子の時点で気づくべきだった。1回目は逃げた2頭の荷馬を回収しに向かい、16日間も迷子になった。もしその馬がぶどうやウサギを積んでいなかったら、彼は飢え死にしていたかもしれない。彼が後に我々に語ったところによると、探検隊の後ろにいると思いこんだ彼は、追いつこうと急いだ挙げ句に飢えて、商隊を探そうと川を下ったのだそうだ。探検隊は彼の探索に最高のハンターを送り、なんとか再会することができた。2回目は川で、3つ又の支流の1つを探索しに行き、そのまま3日間姿を消した。探検隊は彼の探索に熟練ハンターを送るはめになった。のちに彼は支流を逆戻りし我々のいる道に戻ってくるまでの冒険譚を語ったのだった。これらの経験により、探検隊の隊員たちは$PROVINCENAME$のさらなる領域を探検するにあたって決してこのコンキスタドールに単独行動をさせないと決心したが、結局それも意味がなかった。ほんの数分後、彼は再び消えた。"
  seven_cities_events.303.a:0 "再びハンターを派遣する。"
  seven_cities_events.303.b:0 "放置する。今回は彼が我々を見つける必要がある。"
  seven_cities_events.304.t:0 "犬の生活"
