--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1940,7 +1940,7 @@
  native_colonize_title:0 "先住民地域の植民地化"
  native_colonize_desc:0 "There is so much land around us, with little population and infrastructure that it would be a pity not to make it ours. We shall send our people to develop it."
  native_build_army_mission_title:0 "扶養限界の確立"
- native_build_army_mission_desc:0 "Any growing country must maintain a reasonably sized army. By expanding our forces we can both further our political interests abroad and stimulate our domestic economy."
+ native_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  native_assemble_an_army_title:0 "軍の構築"
  native_assemble_an_army_desc:0 "Our territorial ambitions require a grand army. We must build and maintain a strong standing army that can defend and expand the lands under our rule."
  control_unrest_title:0 "騒乱の制御"
@@ -1972,7 +1972,7 @@
  oceania_colonize_title:0 "Colonization of Oceania"
  oceania_colonize_desc:0 "There is so much land around us, with little population and infrastructure that it would be a pity not to make it ours. We shall send our people to develop it."
  oceania_build_army_mission_title:0 "扶養限界の確立"
- oceania_build_army_mission_desc:0 "Any growing country must maintain a reasonably sized army. By expanding our forces we can both further our political interests abroad and stimulate our domestic economy."
+ oceania_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  oceania_assemble_an_army_title:0 "軍の構築"
  oceania_assemble_an_army_desc:0 "Our territorial ambitions require a grand army. We must build and maintain a strong standing army that can defend and expand the lands under our rule."
  oceania_control_unrest_title:0 "騒乱の制御"
