--- a/source/localisation/north_america_redone_l_english.yml
+++ b/source/localisation/north_america_redone_l_english.yml
@@ -3,34 +3,34 @@
  ALT_ADJ:0 "アルタマハ"
  ICH:0 "イチシ"
  ICH_ADJ:0 "イチシ"
- COF:0 "Cofitachequi"
- COF_ADJ:0 "Cofitachequi"
+ COF:0 "コフィタケ"
+ COF_ADJ:0 "コフィタケ"
  JOA:0 "ジョアラ"
  JOA_ADJ:0 "ジョアラ"
- ETO:0 "Etowah"
- ETO_ADJ:0 "Etowah"
- SAT:0 "Satapo"
- SAT_ADJ:0 "Satapo"
+ ETO:0 "エトワ"
+ ETO_ADJ:0 "エトワ"
+ SAT:0 "サタポ"
+ SAT_ADJ:0 "サタポ"
  CIA:0 "チアハ"
  CIA_ADJ:0 "チアハ"
  COO:0 "クーサ"
  COO_ADJ:0 "クーサ"
- ABI:0 "Abihka"
- ABI_ADJ:0 "Abihka"
+ ABI:0 "アビカ"
+ ABI_ADJ:0 "アビカ"
  COW:0 "コウェタ"
  COW_ADJ:0 "コウェタ"
  NTZ:0 "ナチェズ"
  NTZ_ADJ:0 "ナチェズ"
- CAQ:0 "Casqui"
- CAQ_ADJ:0 "Casqui"
- ATA:0 "Atahachi"
- ATA_ADJ:0 "Atahachi"
- KSI:0 "Kasihta"
- KSI_ADJ:0 "Kasihta"
+ CAQ:0 "キャスキ"
+ CAQ_ADJ:0 "キャスキ"
+ ATA:0 "アタハチ"
+ ATA_ADJ:0 "アタハチ"
+ KSI:0 "カシタ"
+ KSI_ADJ:0 "カシタ"
  OEO:0 "オネオタ"
  OEO_ADJ:0 "オネオタ"
- ANL:0 "Anilco"
- ANL_ADJ:0 "Anilco"
+ ANL:0 "アニルコ"
+ ANL_ADJ:0 "アニルコ"
  NTC:0 "ナキトシュ"
  NTC_ADJ:0 "ナキトシュ"
  HNI:0 "ハシナイ"
@@ -45,10 +45,10 @@
  CAY_ADJ:0 "カユガ"
  SEN:0 "セネカ"
  SEN_ADJ:0 "セネカ"
- TAH:0 "Tahontaenrat"
- TAH_ADJ:0 "Taontahenrat"
- ATT:0 "Attignawantan"
- ATT_ADJ:0 "Attignawantan"
+ TAH:0 "タホンテンラット"
+ TAH_ADJ:0 "タホンテンラット"
+ ATT:0 "アティナワンタン"
+ ATT_ADJ:0 "アティナワンタン"
  AGG:0 "Attigneenongnahac"
  AGG_ADJ:0 "Attigneenongnahac"
  ATW:0 "Attiwandaron"
@@ -57,8 +57,8 @@
  ARN_ADJ:0 "Arendaronon"
  TIO:0 "タイオノンタッティ"
  TIO_ADJ:0 "タイオノンタッティ"
- OSH:0 "Osheaga"
- OSH_ADJ:0 "Osheaga"
+ OSH:0 "オシアガ"
+ OSH_ADJ:0 "オシアガ"
  STA:0 "スタダコナ"
  STA_ADJ:0 "スタダコナ"
  ERI:0 "エリー"
@@ -83,18 +83,18 @@
  PEN_ADJ:0 "ペノブスコット"
  MLS:0 "マリシート"
  MLS_ADJ:0 "マリシート"
- NEH:0 "Nehiyaw"
- NEH_ADJ:0 "Nehiyaw"
- NAK:0 "Nakawe"
- NAK_ADJ:0 "Nakawe"
+ NEH:0 "ニヒユ"
+ NEH_ADJ:0 "ニヒユ"
+ NAK:0 "ナカウェ"
+ NAK_ADJ:0 "ナカウェ"
  HWK:0 "Hathawekela"
  HWK_ADJ:0 "Hathawekela"
  CLG:0 "Chalaghawtha"
  CLG_ADJ:0 "Chalaghawtha"
  INN:0 "インヌ"
  INN_ADJ:0 "インヌ"
- KSP:0 "Kispoko"
- KSP_ADJ:0 "Kispoko"
+ KSP:0 "キスポコ"
+ KSP_ADJ:0 "キスポコ"
  WAM:0 "ワンパノアグ"
  WAM_ADJ:0 "ワンパノアグ"
  AGQ:0 "アルゴンキン"
@@ -103,8 +103,8 @@
  LAK_ADJ:0 "ラコタ"
  WCY:0 "ウィチェナ"
  WCY_ADJ:0 "ウィチェナ"
- MSG:0 "Mississage"
- MSG_ADJ:0 "Mississage"
+ MSG:0 "ミシサゲ"
+ MSG_ADJ:0 "ミシサゲ"
  CCA:0 "チスカ"
  CCA_ADJ:0 "チスカ"
  QUI:0 "Quizquiz"
@@ -125,24 +125,24 @@
  PROV4876_ADJ:0 "スカヘントワネン"
  PROV4877:0 "ノットウェイ"
  PROV4877_ADJ:0 "ノットウェイ"
- PROV4878:0 "Eno"
- PROV4878_ADJ:0 "Eno"
+ PROV4878:0 "イーノ"
+ PROV4878_ADJ:0 "イーノ"
  PROV4879:0 "Kituwah"
  PROV4879_ADJ:0 "Kituwah"
  PROV4880:0 "Combahee"
  PROV4880_ADJ:0 "Combahee"
  PROV4881:0 "Sawokli"
  PROV4881_ADJ:0 "Sawokli"
- PROV4882:0 "Etali"
- PROV4882_ADJ:0 "Etali"
+ PROV4882:0 "エターリ"
+ PROV4882_ADJ:0 "エターリ"
  PROV4883:0 "Napochi"
  PROV4883_ADJ:0 "Napochi"
  PROV4884:0 "ホーマ"
  PROV4884_ADJ:0 "ホーマ"
- PROV4885:0 "Avoyel"
- PROV4885_ADJ:0 "Avoyel"
- PROV4886:0 "Nasoni"
- PROV4886_ADJ:0 "Nasoni"
+ PROV4885:0 "アヴォイル"
+ PROV4885_ADJ:0 "アヴォイル"
+ PROV4886:0 "ナソニ"
+ PROV4886_ADJ:0 "ナソニ"
  PROV4887:0 "Cochati"
  PROV4887_ADJ:0 "Cochati"
  PROV4888:0 "Tatteroa"
@@ -165,16 +165,16 @@
  PROV4896_ADJ:0 "メダクティック"
  PROV4897:0 "Keinouche"
  PROV4897_ADJ:0 "Keinouche"
- PROV4898:0 "Noquet"
- PROV4898_ADJ:0 "Noquet"
+ PROV4898:0 "ノケ"
+ PROV4898_ADJ:0 "ノケ"
  PROV4899:0 "Mamaceqtaw"
  PROV4899_ADJ:0 "Mamaceqtaw"
  PROV4900:0 "Otoe"
  PROV4900_ADJ:0 "Otoe"
  PROV4901:0 "Saone"
  PROV4901_ADJ:0 "Saone"
- PROV4902:0 "Makandwewin"
- PROV4902_ADJ:0 "Makandwein"
+ PROV4902:0 "マカンドウィウィン"
+ PROV4902_ADJ:0 "マカンドウィウィン"
  PROV4903:0 "Chinko"
  PROV4903_ADJ:0 "Chinko"
  PROV4904:0 "Espeminkia"
@@ -201,8 +201,8 @@
  PROV4914_ADJ:0 "Neozho"
  PROV4915:0 "Pitahawirata"
  PROV4915_ADJ:0 "Pitahawirata"
- PROV4916:0 "Panka"
- PROV4916_ADJ:0 "Panka"
+ PROV4916:0 "パンカ"
+ PROV4916_ADJ:0 "パンカ"
  PROV4917:0 "Selis"
  PROV4917_ADJ:0 "Selis"
  PROV4918:0 "Hunkpapha"
@@ -242,8 +242,8 @@
  PROV4941:0 "Lake Cahuilla"
  PROV4941_ADJ:0 "Lake Cahuilla"
  algonquin:0 "Anicinabe"
- miami:0 "Myaamia"
- innu:0 "Innu-Naskapi"
+ miami:0 "マイアミア"
+ innu:0 "インヌ＝ナスカピ"
  natchez:0 "Natchez"
  yoron:0 "Yoron"
  yuchi:0 "Yuchi"
@@ -255,17 +255,17 @@
  plains_cree:0 "Plains Cree"
  bungi:0 "Bungi"
  yamasee:0 "Yamasee"
- eastern_maine_area:0 "Eastern Maine"
- new_york_area:0 "New York"
+ eastern_maine_area:0 "メイン東部"
+ new_york_area:0 "ニューヨーク"
  westsylvania_area:0 "Alleghenies"
  south_carolina_piedmont_area:0 "South Carolina Piedmont"
- western_kentucky_area:0 "Western Kentucky"
- southern_illinois_area:0 "Southern Illinois"
- iowa_area:0 "Iowa"
- kansas_area:0 "Kansas"
+ western_kentucky_area:0 "ケンタッキー西部"
+ southern_illinois_area:0 "イリノイ南部"
+ iowa_area:0 "アイオワ"
+ kansas_area:0 "カンザス"
  minnessota_area:0 "Minnessota"
  texas_plains_area:0 "Texas Plains"
  st_john_valley_area:0 "St John's Valley"
- trois_rivieres_area:0 "Trois-Rivieres"
- ottawa_valley_area:0 "Ottawa Valley"
- manitoba_area:0 "Manitoba"
+ trois_rivieres_area:0 "トロワ・リヴィエール"
+ ottawa_valley_area:0 "オタワ渓谷"
+ manitoba_area:0 "マニトバ"
