--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4915,7 +4915,7 @@
  flavor_pow.3.t:0 "Anglo-Powhatan Wars"
  flavor_pow.3.d:0 "First, they came in peace. They reached our shores with promises of alliance and help, they asked for food, for maps, for guidance in this - for them - uncharted territory. Our generosity knew no limits. We assisted them in everything, we invited them to join our feasts, to meet our rulers. We showed them how to farm the land and which path to follow when going into the wilderness.\nThen, they started to ask for more. They retired to their forts; they did not need us anymore, but they needed our land. [Root.Monarch.GetName] takes a moment to observe the marching of their armies with an unsettling sorrow - the final arrival of what he thought inevitable."
  flavor_pow.3.b:1 "We shall crush them!"
- flavor_pow.3.c:0 "Our honor will be remembered."
+ flavor_pow.3.c:0 "We will need allies to defeat them."
  flavor_pow.4.t:0 "Tribal Trade"
  flavor_pow.4.d:0 "For decades and even centuries, trade has been an essential part of our lives. We have traded within and beyond Tsenacommacah, following east-west trade routes. Shell beads and fur would be given in exchange for copper and red dye, all of them luxury items that could help us prove our high status. Today, one of our allies has sent a merchant to our village. This man has offered to teach us where to find these things ourselves, a testament to the sincerity of the alliance between our peoples."
  flavor_pow.4.a:0 "This could be really useful."
