--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -6972,7 +6972,7 @@
  PAPAL_INFLUENCE_NOT_ENOUGH:0 "§R－十分な教皇への影響力を持っていません。§!"
  levy_church_tax:0 "教会税の取り立て"
  bless_monarch:0 "君主への祝福"
- indulgence_for_sins:0 "免罪符の賜与"
+ indulgence_for_sins:1 "Sanction Dynasty"
  local_saint:0 "地域の聖人を列福する"
  PAPAL_INFLUENCE_NO_CARDINAL:0 "§R－有効な枢機卿を持っていない場合は教皇への影響力を投資することができません。§!"
  CARDINALLIST:0 "$COUNTRY$の$PROVINCE$の可能性は$SCORE$%です。\n"
@@ -7058,12 +7058,12 @@
  HRE_MAJORITY:0 "ほとんどの神聖ローマ帝国加盟国"
  ICON_RELIGIOUS_UNITY:0 "§Y宗教的団結§Wへの要求"
  BORN_IN:0 "$COUNTRY$に誕生。"
- HAD_COUNTRY_FLAG_LESS_THAN:0 "国家フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った"
- HAD_COUNTRY_FLAG_AT_LEAST:0 "国家フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日以上持った"
- HAD_GLOBAL_FLAG_LESS_THAN:0 "グローバルフラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った"
- HAD_GLOBAL_FLAG_AT_LEAST:0 "グローバルフラグ「§Y$FLAG$§W」を§Y$DAYS$§W日以上持った"
- HAD_PROVINCE_FLAG_LESS_THAN:0 "州フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った"
- HAD_PROVINCE_FLAG_AT_LEAST:0 "州フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日以上持った"
+ HAD_COUNTRY_FLAG_LESS_THAN:1 "Had country flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_COUNTRY_FLAG_AT_LEAST:1 "Had country flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_GLOBAL_FLAG_LESS_THAN:1 "Had global flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_GLOBAL_FLAG_AT_LEAST:1 "Had global flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_PROVINCE_FLAG_LESS_THAN:1 "Had province flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_PROVINCE_FLAG_AT_LEAST:1 "Had province flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
  NOCLAIMWENOTMONARCHY:0 "君主だけが王位を主張できます！"
  NOCLAIMTHEYNOTMONARCHY:0 "彼らは君主制ではありません"
  NOCLAIMNOTSAMEDYNASTY:0 "我々は彼らと同じ支配的な王朝を持っていません"
@@ -7184,8 +7184,8 @@
  LOCAL_PRODUCTION_VALUE:0 "州生産値"
  DYNASTY_IS:0 "支配王朝が右記である：'"
  DYNASTY_IS_NOT:0 "支配王朝が右記ではない：'"
- MISSION_COMPLETED:2 "Completed Mission §Y$MISSION_TITLE$§!\n"
- MISSION_NOT_COMPLETED:2 "Not completed Mission §Y$MISSION_TITLE$§!\n"
+ MISSION_COMPLETED:2 "ミッション§Y$MISSION_TITLE$§!が完了した\n"
+ MISSION_NOT_COMPLETED:2 "ミッション§Y$MISSION_TITLE$§!は完了していない\n"
  MISSION_AVAILABLE:0 "ミッション§Y$MISSION_TITLE$§!が利用可能"
  MISSION_NOT_AVAILABLE:0 "ミッション§Y$MISSION_TITLE$§!は利用不可"
  ADD_HEIR_CLAIM:0 "後継者の請求の強さ"
