--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -93,7 +93,7 @@
  COLONIST_CONSTRUCTION:0 "colonizing"
  SPECIFIC_BUILDING_CONSTRUCTION:1 "constructing a $BUILDING$"
  CANAL_TYPE_NAME:0 "運河"
- MONUMENT_TYPE_NAME:0 "monument"
+ MONUMENT_TYPE_NAME:0 "記念碑"
  GREAT_PROJECT_UPGRADE_CONSTRUCTION_DESC:0 "The $TYPE$ upgrade for $NAME|Y$ will be done on $DATE$"
  UPGRADE_GREAT_PROJECT:0 "Starts the upgrade of the $TYPE$ $NAME|Y$."
  hagia_sophia:0 "ハギア・ソフィア"
@@ -276,7 +276,7 @@
  PEACE_PILLAGE_CAPITAL_STATE_DESC:0 "$TAKER$ pillages $GIVER$ capital state"
  PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY:0 "$CAPITAL|Y$ is not occupied by $TAKER|Y$ or one of its subjects."
  PILLAGE_CAPITAL_CANNOT_NO_VALID_PROVINCES:0 "All provinces in the capital area have been taken."
- NUM_OF_TIMES_PILLAGED_CAPITAL_STATE:0 "Number of times pillaged a capital state"
+ NUM_OF_TIMES_PILLAGED_CAPITAL_STATE:1 "Number of times used 'Pillage capital state' in a peace treaty"
  NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT:0 "Number of times concentrated development"
  COUNTRY_HAS_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has pillaged the capital state of $OTHERCOUNTRY$.\n"
  COUNTRY_HAS_NOT_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has not pillaged the capital state of $OTHERCOUNTRY$.\n"
@@ -728,7 +728,7 @@
  TRADE_FAVORS_FOR_HEIR_CANNOT_COST:0 "You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to install our dynasty member as their heir."
  TRADE_FAVORS_FOR_HEIR_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to install our dynasty member as their heir."
  TRADE_FAVORS_FOR_HEIR_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for installing a member of our dynasty as their heir."
- TRADE_FAVORS_FOR_HEIR_DESC:0 "We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors."
+ TRADE_FAVORS_FOR_HEIR_DESC:1 "We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors. This will create a truce between the countries and cause $AE|R$ Aggressive Expansion in countries of the same religion."
  X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$ is a subject of $OVERLORD|Y$."
  DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
  WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "Trade Favors For Trust"
@@ -902,7 +902,7 @@
  FROM_INSUFFICIENT_SUPPORT:0 "From insufficient support: §R$VALUE$§W"
  gave_away_province:0 "Gave away our province"
  SUPPORT_REBELS_POWER_PROJECTION:0 "Because $WHO|Y$ are our rivals, you will gain $VALUE|Y$ Power Projection."
- LONG_EU3_DATE_STRING:0 "$DD$ $MONTH$ $YYYY$"
+ LONG_EU3_DATE_STRING:0 "$YYYY$年$MONTH$$DD$日"
  EU3_DATE_STRING:0 "$YYYY$.$MM$.$DD$"
  DASH_EU3_DATE_STRING:0 "$YYYY$_$MM$_$DD$"
  SET_ALL_MESSAGES_TO_POPUP:0 "Click to set all message types to be displayed as a popup."
@@ -992,3 +992,42 @@
  SELECT_CULTURE_DESIGNER:0 "Select $CULTURE|Y$ as your Primary Culture"
  CANNOT_CONCENTRATE_DEVELOPMENT_WRONG_SUBJECT_TYPE:0 "$SUBJECTTYPE|Y$ subjects cannot have their development concentrated"
  SELECT_EDICT_FOR_PROVINCE:0 "Select Edict for $PROVINCE$:"
+ IF_COLONY_SIZE_IS_X:0 "If the colony has at least $SIZE|Y$ Provinces:"
+ active_religious_turmoil:0 "Religious Turmoil"
+ CONTINUE_BUTTON_STATS:0 "Return to Game"
+ CONDOTTIERI_OFFER_ALLIANCE:0 "§R- You cannot rent out Condottieri to a nation that is at war with a nation that you have an Alliance with.§!"
+ HAVE_CONDOTTIERI_WITH:0 "You cannot make an Alliance with a nation that you have Condottieri fighting."
+ CANNOT_BUILD_SUPPLY_DEPOT_AT_SEA:0 "It would be crazy to drop a supply depot in the sea."
+ CANNOT_AFFORD_GURU_COST:0 "You cannot afford the $POW|Y$ $TYPE$ power needed for this Teaching."
+ CANNOT_PICK_TEACHING_NEW_GURU:0 "You cannot select more than one teaching from each Guru."
+ GURU_APPOINTED:0 "$GURU|Y$ is made Guru."
+ NEW_GURU_SETUP:0 "When a new Guru is appointed."
+ NEW_GURU_HEADER:0 "$MESSENGER$"
+ NEW_GURU_1:0 "New Guru"
+ NEW_GURU_2:0 "$GURU|Y$ has been appointed the new Guru."
+ NEW_GURU_3:0 "They bring the following effects:"
+ NEW_GURU_4:0 "$EFFECTS$."
+ NEW_GURU_LOG:0 "New Guru appointed."
+ NEW_GURU_BTN1:0 "OK"
+ NEW_GURU_BTN2:0 "OK"
+ NEW_GURU_BTN3:0 "OK"
+ NO_GURU_SETUP:0 "When no Guru is available."
+ NO_GURU_HEADER:0 "$MESSENGER$"
+ NO_GURU_1:0 "No Guru"
+ NO_GURU_2:0 "Our Religion is lacking a Guru."
+ NO_GURU_LOG:0 "No Guru appointed."
+ NO_GURU_BTN1:0 "OK"
+ NO_GURU_BTN2:0 "OK"
+ NO_GURU_BTN3:0 "OK"
+ EXTEND_REGENCY_IMPERIAL_AUTHORITY_HIT:0 "Since you are the Emperor, you will also suffer a reduction in Imperial Authority of $IAHIT|Y$."
+ ABDICATE_PERFORM_IRO2_NEITHER:0 "There will be a hit of $PRESTIGE_HIT|R$ prestige from this action."
+ BREAK_ALLIANCE_COOLDOWN:0 "We can only ask an ally to break an Alliance once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ TRADE_FAVORS_FOR_GOLD_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for gold once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ TRADE_FAVORS_FOR_MANPOWER_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for Manpower once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ TRADE_FAVORS_FOR_SAILORS_COOLDOWN:0 "$COUNTRY$ can only ask an ally to trade Favors for Sailors once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ REDUCE_RELATIONS_COOLDOWN:0 "$COUNTRY$ can only ask an ally to reduce relations with another country once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$."
+ DIPLO_SAILORS:0 "$WHO$ Sailors: "
+ DIPLO_LOW_SAILORS:0 "$WHO$ has low Sailors: "
+ DIPLO_RELATIVE_OPINION:0 "$WHO$ relative opinion of $COUNTRY01$ and $COUNTRY02$: "
+ ENFORCE_PEACE_CANNOT_LEAGUE_WAR:0 "You cannot enforce peace in a Religious League War."
+ CANNOT_MOVE_ALREADY_IN_PROGRESS: "The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$"
