--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -11,7 +11,7 @@
  CONFIRM_CENTRALIZE_STATE_TEXT:1 "Are you sure you want to spend $COST|0Y$ of government progress to centralize the $STATE|Y$ in the province of $PROVINCE|Y$, and reduce it's governing cost by $REDUCTION|0Y$? It will take $YEARS|0Y$ years."
  CENTRALIZE_STATE_CONSTRUCTION_TITLE:0 "Centralize state completed"
  CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "When centralize state completed."
- CENTRALIZE_STATE_CONSTRUCTION_1:0 "Centralize State completed"
+ CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
  CENTRALIZE_STATE_CONSTRUCTION_2:0 "The construction in $PROVINCE$ has been finished."
  CENTRALIZE_STATE_CONSTRUCTION_3:1 "Now $STATE|Y$ is a centralized state."
  CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "Centralize state construction has been completed in $PROVINCE$."
