--- a/source/localisation/random_new_world_l_english.yml
+++ b/source/localisation/random_new_world_l_english.yml
@@ -4524,8 +4524,8 @@
  the_bone_lakes_adj:0 "ボーン湖"
  polar_blade:0 "ブレード極域"
  polar_blade_adj:0 "ブレード極域"
- white_mountains:0 "ホワイト山脈"
- white_mountains_adj:0 "ホワイト山脈"
+ white_mountains:0 "ホワイト山地"
+ white_mountains_adj:0 "ホワイト山地"
  pike_ridge:0 "パイク尾根"
  pike_ridge_adj:0 "パイク尾根"
  northern_polar_ridge:0 "北極尾根"
